[project]
name = "stepflow-sdk"
version = "0.1.0"
description = "Python SDK for Stepflow components and workflows."
readme = "README.md"
authors = []
requires-python = ">=3.13"
dependencies = [
    "msgspec>=0.19.0",
    "jsonschema>=4.17.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.31.2",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
stepflow_sdk = "stepflow_sdk.main:main"
generate-protocol = "stepflow_sdk.generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
