[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Ben Chambers"]
repository = "https://github.com/stepflow-ai/stepflow"
homepage = "https://stepflow.org"

[workspace.dependencies]
# Stepflow crates
stepflow-proto = { version = "0.13", path = "../../stepflow-rs/crates/stepflow-proto" }
stepflow-flow = { version = "0.13", path = "../../stepflow-rs/crates/stepflow-flow" }
stepflow-worker = { path = "crates/stepflow-worker" }
stepflow-client = { path = "crates/stepflow-client" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC / protobuf
tonic = { version = "0.14", features = ["transport"] }
prost = "0.14"
prost-wkt-types = "0.7"
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
