[project]
name = "stepflow-recovery-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.2",
    "httpx>=0.25",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 180
