[package]
name = "pingora-lb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pingora HTTP proxy framework
pingora = { version = "0.6", features = ["proxy"] }
pingora-core = "0.6"
pingora-http = "0.6"
pingora-load-balancing = "0.6"
pingora-proxy = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# Utilities
once_cell = "1.19"
arc-swap = "1.7"
anyhow = "1.0"
itertools = "0.14"