[project]
name = "stepflow-api"
version = "0.1.0"
description = "Generated API client for Stepflow server"
requires-python = ">=3.11"
dependencies = [
    "urllib3>=2.1.0,<3.0.0",
    "pydantic>=2",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stepflow_api"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
