[project]
name = "stepflow-client"
version = "0.1.0"
description = "HTTP client for Stepflow servers"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "DataStax Inc."}
]
maintainers = [
    {name = "DataStax Inc."}
]
requires-python = ">=3.11"
keywords = [
    "workflow",
    "automation",
    "ai",
    "stepflow",
    "client",
    "http",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = [
    "stepflow-api>=0.1.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
stepflow-api = { workspace = true }

[project.urls]
Homepage = "https://stepflow-ai.github.io/stepflow/"
Documentation = "https://stepflow-ai.github.io/stepflow/"
Repository = "https://github.com/stepflow-ai/stepflow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stepflow_client"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.4",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
